--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
+	<title>Excursion</title>
 	<meta charset="utf-8">
-	<style>
-	</style>
+    <link href = "./Resources/CSS/style.css">
 </head>
 <body>
+    <h1>
+        Discover hidden places in the world around you
+    </h1>
+        <section>
+            <h6>
+                Download Excursion (Coming Soon!)
+            </h6>
+        </section>
+        <section>
+            <h2>
+            Your personal travel guide
+            </h2>
+            <p>
+                Excursion remembers places you like, and reccommends new points of interest around you.
+            </p>
+        </section>
+        <footer>
+            <h2>
+                Coming Soon for iPhone and Android
+            </h2>
+            <h6>
+                Download Excursion (Coming soon)
+            </h6>
+        </footer>
 </body>
 </html>
