--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -13,6 +13,9 @@
             <h6>
                 Download Excursion (Coming Soon!)
             </h6>
+            <video src="Resources/CSS/excursion.mp4">
+                Video not supported
+            </video>
         </section>
         <section>
             <h2>
@@ -21,8 +24,10 @@
             <p>
                 Excursion remembers places you like, and reccommends new points of interest around you.
             </p>
+            <img src="Resources/CSS/camp.webp">
         </section>
         <footer>
+            <img src="Resources/CSS/phone.webp"
             <h2>
                 Coming Soon for iPhone and Android
             </h2>
