--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Excursion</title>
 	<meta charset="utf-8">
-    <link href = "./Resources/CSS/style.css">
+    <link href = "Resources/CSS/style.css" rel = "stylesheet">
 </head>
 <body>
     <h1>
@@ -13,7 +13,7 @@
             <h6>
                 Download Excursion (Coming Soon!)
             </h6>
-            <video src="Resources/CSS/excursion.mp4">
+            <video src="Resources/CSS/excursion.mp4" controls autoplay>
                 Video not supported
             </video>
         </section>
@@ -27,13 +27,14 @@
             <img src="Resources/CSS/camp.webp">
         </section>
         <footer>
-            <img src="Resources/CSS/phone.webp"
+            <img src="Resources/CSS/phone.webp">
             <h2>
                 Coming Soon for iPhone and Android
             </h2>
             <h6>
                 Download Excursion (Coming soon)
             </h6>
+            <h6 id = "copyright">© Excursion"></h6>
         </footer>
 </body>
 </html>
